# matter

./: .appveyor.yml  .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  meson.build  meson_options.txt
.gitlab-ci/: Dockerfile.alp  Dockerfile.deb  run-docker.sh
include/matter/: component.hpp  dispatcher.hpp  ecs.hpp  registry.hpp  world.hpp
include/matter/access/: component_filter.hpp  create.hpp  entity_handle.hpp  prototype.hpp  read.hpp  readwrite.hpp  registry_access_view.hpp  storage_handle.hpp  type_traits.hpp  write.hpp
include/matter/component/: any_group.hpp  component_container.hpp  component_identifier.hpp  component_manager.hpp  component_storage.hpp  component_traits.hpp  component_view.hpp  group.hpp  group_container.hpp  group_slice.hpp  group_vector.hpp  group_vector_view.hpp  group_view.hpp  id.hpp  identifier.hpp  identity.hpp  insert_buffer.hpp  metadata.hpp  prototype.hpp  range.hpp  registry.hpp  registry_view.hpp  sparse_vector.hpp  sparse_vector_storage.hpp  traits.hpp  typed_id.hpp  untyped_id.hpp  vector_storage.hpp
include/matter/concepts/: assignable_from.hpp  boolean.hpp  common_reference_with.hpp  constructible_from.hpp  convertible_to.hpp  copy_constructible.hpp  copyable.hpp  default_constructible.hpp  destructible.hpp  equality_comparable.hpp  floating_point.hpp  integral.hpp  invocable.hpp  movable.hpp  move_constructible.hpp  regular.hpp  same_as.hpp  semiregular.hpp  signed_integral.hpp  totally_ordered.hpp  unsigned_integral.hpp  weakly_equality_comparable_with.hpp
include/matter/container/: concepts.hpp  emplace_back.hpp  erase_at.hpp  soa.hpp  soa_iterator.hpp  soa_proxy.hpp  soa_sentinel.hpp  span.hpp  traits.hpp
include/matter/entity/: entity.hpp  entity_handle.hpp  entity_manager.hpp  entity_traits.hpp
include/matter/id/: component_identifier.hpp  default_component_identifier.hpp  id.hpp  id_cache.hpp  prototype.hpp  typed_id.hpp  untyped_id.hpp
include/matter/iterator/: begin.hpp  common.hpp  concepts.hpp  end.hpp  iter_move.hpp  traits.hpp
include/matter/query/: access.hpp  category.hpp  component_query_description.hpp  entities.hpp  entity_query_processor.hpp  presence.hpp  processor.hpp  runtime.hpp  type_query.hpp  type_traits.hpp  typed_access.hpp
include/matter/query/primitives/: concurrency.hpp  exclude.hpp  filter.hpp  inaccessible.hpp  optional.hpp  read.hpp  require.hpp  write.hpp
include/matter/ranges/: concepts.hpp  front_back.hpp  size.hpp  traits.hpp
include/matter/storage/: erased_storage.hpp  sparse_vector.hpp  sparse_vector_storage.hpp  traits.hpp
include/matter/system/: job.hpp  system.hpp  world_compiler.hpp
include/matter/util/: algorithm.hpp  concepts.hpp  container.hpp  empty.hpp  erased.hpp  filter_transform.hpp  id_erased.hpp  iterator.hpp  meta.hpp  prototype.hpp  traits.hpp  type_list.hpp  variant.hpp
include/matter/utility/: common_reference.hpp  decay_copy.hpp  priority_tag.hpp
scripts/nameof/: .gitignore  PKGBUILD
src/: meson.build
subprojects/: .gitignore  catch2.wrap  hana.wrap  microsoft-gsl.wrap
test/: CMakeLists.txt  meson.build  test_access.cpp  test_algorithm.cpp  test_begin_end.cpp  test_component.cpp  test_ecs.cpp  test_emplace_back.cpp  test_entity.cpp  test_entt.cpp  test_erased.cpp  test_group.cpp  test_group_container.cpp  test_id_cache.cpp  test_insert_buffer.cpp  test_job.cpp  test_query.cpp  test_registry.cpp  test_soa.cpp  test_span.cpp  test_storage.cpp  test_typed_id.cpp  test_util.cpp  test_variant.cpp
test/bench/: insert.cpp  meson.build
